[project]
name = "vector-db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.32",
    "langchain-pinecone>=0.2.11",
    "langchain-tavily>=0.2.11",
    "langchainhub>=0.1.21",
    "python-dotenv>=1.1.1",
    "streamlit>=1.49.1",
    "streamlit-chat>=0.1.1",
]
